--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Simple crud commandline feature",
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "uba": "./index.js"
   },
   "author": "Subham Thapa",
   "license": "ISC"
