--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
   "name": "uba-ims",
   "version": "1.0.0",
+  "type": "module",
   "description": "Simple crud commandline feature",
   "main": "index.js",
   "scripts": {
+    "build": "tsc -p tsconfig.json",
+    "lint": "eslint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "uba": "./index.js"
+    "uba": "built/src/index.js"
   },
   "author": "Subham Thapa",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@eslint/js": "^9.24.0",
+    "@types/node": "^22.14.0",
+    "eslint": "^9.24.0",
+    "globals": "^16.0.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.29.1"
+  }
 }
