--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "type": "module",
   "description": "Simple crud commandline feature",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "cli": "tsx src/index.ts",
+    "build": "tsc",
+    "dev": "tsc && node built/src/index.js",
+    "start": "tsx watch  src/index.ts",
     "lint": "eslint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,15 +15,16 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
     "eslint": "^9.24.0",
-    "globals": "^16.0.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.1"
   },
   "dependencies": {
-    "chalk": "^5.4.1"
+    "chalk": "^5.4.1",
+    "express": "^5.1.0"
   }
 }
