--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
-    "outDir": "./built",
-    // "rootDir": "./",
+    "module": "ESNext",
+    "outDir": "dist",
+    "rootDir": "./",
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "target": "ES2018",
-    "moduleResolution": "nodenext"
+    "target": "ES2020",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["dist"]
 }
