added response type, middleware

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc && node built/src/index.js",
-    "start": "tsx watch  src/index.ts",
+    "dev": "tsc && node --env-file=.env dist/src/index.js",
+    "start": "tsx watch --env-file=.env  src/index.ts ",
     "lint": "eslint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,7 +18,6 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
     "eslint": "^9.24.0",
-    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.1"
