--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uba-ims",
   "version": "1.0.0",
   "type": "module",
-  "description": "Simple crud commandline feature",
+  "description": "CRUD Applicati",
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
@@ -18,6 +18,7 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
     "eslint": "^9.24.0",
+    "globals": "^16.0.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.1"
