--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-PORT=port
+PORT=your_port_here
+DB_HOST=database_host_name
+DB_USER=database_username
+DB_PASSWORD=database_password
+DB_NAME=database_name
