--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@eslint/js": "^9.24.0",
     "@types/express": "^5.0.1",
+    "@types/mysql": "^2.15.27",
     "@types/node": "^22.14.0",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
@@ -24,7 +25,11 @@
     "typescript-eslint": "^8.29.1"
   },
   "dependencies": {
+    "@apollo/server": "^4.12.0",
     "chalk": "^5.4.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
+    "mysql": "^2.18.1"
   }
 }
