--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"],
-  "exclude": ["dist"]
+  "include": ["src", "test"],
+  "exclude": ["node_modules", "dist"]
 }
