--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "tsc && node --env-file=.env dist/src/index.js",
     "dev": "tsx watch --env-file=.env  src/index.ts ",
     "lint": "eslint",
-    "test": "tsc && nyc  mocha dist/src/tests/**/*.test.js "
+    "test": "c8  mocha src/tests/**/*.test.ts "
   },
   "author": "Subham Thapa",
   "license": "ISC",
@@ -25,7 +25,6 @@
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
     "mocha": "^11.2.2",
-    "nyc": "^17.1.0",
     "sinon": "^20.0.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
@@ -38,17 +37,5 @@
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
     "mysql": "^2.18.1"
-  },
-  "nyc": {
-    "all": true,
-    "check-coverage": true,
-    "skip-full": true,
-    "include": "dist/src/app/**/*.js",
-    "reporter": [
-      "html",
-      "text",
-      "lcov",
-      "cobertura"
-    ]
   }
 }
