--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@types/express": "^5.0.1",
     "@types/mocha": "^10.0.10",
     "@types/mysql": "^2.15.27",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.15.17",
     "@types/sinon": "^17.0.4",
     "chai": "^5.2.0",
     "eslint": "^9.24.0",
     "globals": "^16.0.0",
     "mocha": "^11.2.2",
     "sinon": "^20.0.0",
+    "supertest": "^7.1.1",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.1"
@@ -36,6 +37,8 @@
     "express": "^5.1.0",
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.23"
   }
 }
