--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,15 @@
     "module": "ESNext",
     "outDir": "dist",
     "rootDir": "./",
-    "strict": true,
+
     "noImplicitAny": true,
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "target": "ES2020",
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "sourceMap": true
   },
   "include": ["src", "test"],
   "exclude": ["node_modules", "dist"]
