Using .env values for database also refactored graphql

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 PORT=your_port_here
+TEST_PORT=port_used_for_testing
 DB_HOST=database_host_name
+DB_PORT=database_port_number
 DB_USER=database_username
 DB_PASSWORD=database_password
 DB_NAME=database_name
