test refactor and new InternDetailsController test

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ DB_PORT=database_port_number
 DB_USER=database_username
 DB_PASSWORD=database_password
 DB_NAME=database_name
+SECRET=your_jwt_secret
