--- a/.nycrc.json
+++ b/.nycrc.json
@@ -1,5 +1,8 @@
 {
     "all": true,
     "include":"src/app/**/*.ts",
-    "reporter": ["html", "text"]
+    "reporter": ["html", "text"],
+    "exclude": [
+        "src/app/**/schema.ts"
+    ]
 }
