--- a/.nycrc.json
+++ b/.nycrc.json
@@ -3,6 +3,9 @@
     "include":"src/app/**/*.ts",
     "reporter": ["html", "text"],
     "exclude": [
-        "src/app/**/schema.ts"
+        "src/app/**/schema.ts",
+        "src/app/**/*.db.ts",
+                "src/app/**/*.routes.ts"
+
     ]
 }
