--- a/.nycrc.json
+++ b/.nycrc.json
@@ -4,8 +4,8 @@
     "reporter": ["html", "text"],
     "exclude": [
         "src/app/**/schema.ts",
-        "src/app/**/*.db.ts",
-                "src/app/**/*.routes.ts"
+       
+        "src/app/**/*.route.ts"
 
     ]
 }
