--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "start": "tsc && node --env-file=.env dist/src/index.js",
     "dev": "tsx watch --env-file=.env  src/index.ts ",
     "lint": "eslint",
-    "typeorm": "typeorm-ts-node-esm",
+  "typeorm": "node --env-file=.env --loader ts-node/esm ./node_modules/typeorm/cli.js",
+
     "test": "c8  mocha src/tests/**/*.test.ts ",
     "migration:run": "npm run typeorm -- migration:run -d ./src/data-source.ts",
-    "migration:gen": "npm run typeorm -- migration:generate -d ./src/data-source.ts ./src/migrations/"
+    "migration:gen": "npm run typeorm -- migration:generate -d ./src/data-source.ts ./src/migrations/time",
+    "migration:create": "npm run typeorm -- migration:create ./src/migrations/time"
   },
   "author": "Subham Thapa",
   "license": "ISC",
