password with bcrypt

--- a/.nycrc.json
+++ b/.nycrc.json
@@ -4,8 +4,9 @@
     "reporter": ["html", "text"],
     "exclude": [
         "src/app/**/schema.ts",
-       
-        "src/app/**/*.route.ts"
-
+          "src/app/**/cli.ts",
+        "src/app/**/*.route.ts",
+        "src/app/**/index.ts",
+         "src/app/**/*.db.ts"
     ]
 }
