--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "start": "tsc && node --env-file=.env dist/src/index.js",
     "dev": "tsx watch --env-file=.env  src/index.ts ",
     "lint": "eslint",
-  "typeorm": "node --env-file=.env --loader ts-node/esm ./node_modules/typeorm/cli.js",
-
+    "typeorm": "node --env-file=.env --loader ts-node/esm ./node_modules/typeorm/cli.js",
     "test": "c8  mocha src/tests/**/*.test.ts ",
     "migration:run": "npm run typeorm -- migration:run -d ./src/data-source.ts",
     "migration:gen": "npm run typeorm -- migration:generate -d ./src/data-source.ts ./src/migrations/time",
@@ -20,6 +19,7 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/chai": "^5.2.2",
     "@types/express": "^5.0.1",
     "@types/mocha": "^10.0.10",
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.12.0",
+    "bcrypt": "^6.0.0",
     "chalk": "^5.4.1",
     "express": "^5.1.0",
     "express-jwt": "^8.5.1",
