--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@eslint/js": "^9.24.0",
     "@types/bcrypt": "^5.0.2",
     "@types/chai": "^5.2.2",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
     "@types/mocha": "^10.0.10",
     "@types/mysql": "^2.15.27",
@@ -40,11 +42,14 @@
     "@apollo/server": "^4.12.0",
     "bcrypt": "^6.0.0",
     "chalk": "^5.4.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "express-jwt": "^8.5.1",
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
     "mysql": "^2.18.1",
+    "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.23"
