--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   database:
     image: postgres
-    restart: always
+    restart: unless-stopped
     ports:
       - ${DB_PORT}:${DB_PORT}
     environment:
