--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 
 services:
   database:
@@ -31,6 +30,11 @@ services:
       DB_NAME: ${DB_NAME}
       SECRET: ${SECRET}
       URL: ${URL}
+    volumes:
+      - type: bind
+        source: ./src
+        target: /app/src
+        read_only: true
     networks:
       - uba_intern
 
